[package]
name = "libdonut-rs"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
description = "Public API for the Donut-rs project"

[dependencies]
goblin = { version = "0.10.0", optional = true, features = ["alloc"] }
dataparser_core = { version = "0.1.0", default-features = false, optional = true }
libc = { version = "0.2.174", optional = true }
azathoth-utils = { version = "0.1.2" }
azathoth_allocator = { version = "0.1.1", optional = true }
azathoth_logger = { version = "0.1.2", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
azathoth_libload = { version = "0.1.3", optional = true }
hex = { version = "0.4.3", optional = true }
toml = { version = "0.9.7", optional = true }
rand = { version = "0.10.0-rc.0", optional = true }
flate2 = { version = "1.1.2", optional = true }
reqwest = { version = "0.12.23", features = ["blocking"], optional = true }
cbc = { version = "0.1.2", features = ["alloc", "block-padding"], optional = true }
aes = { version = "0.8.4", optional = true }
sha2 = { version = "0.10.9", optional = true }
md5 = { version = "0.8.0", optional = true }
base64 = { version = "0.22.1", optional = true }
chrono = { version = "0.4.42", optional = true }
az_logger = { version = "0.1.5", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
azathoth-core = { version = "0.1.4", features = ["dotnet-defs", "windows", "av-defs"], default-features = false }
[target.'cfg(target_os="linux")'.dependencies]
azathoth-core = { version = "0.1.4", features = ["linux"], default-features = false }

[features]
default = ["std"]
loader = ["dep:azathoth_libload", "dep:azathoth_allocator"]
logging = ["dep:azathoth_logger"]
libc = ["dep:libc"]
unstable = [] # WIP and unstable elements of the API
std = [
    "dep:goblin",
    "dep:dataparser_core",
    "dep:serde",
    "dep:serde_json",
    "dep:hex",
    "dep:flate2",
    "dep:rand",
    "dep:chrono",
    "dep:aes",
    "dep:cbc",
    "dep:base64",
    "dep:reqwest",
    "dep:toml",
    "dep:sha2",
    "dep:md5",
    "dep:az_logger"
]
